--- a/front/package.json
+++ b/front/package.json
@@ -1,9 +1,15 @@
 {
   "devDependencies": {
     "cssnano": "^4.1.10",
-    "sass": "^1.26.11"
+    "sass": "^1.26.11",
+    "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@fullcalendar/core": "^5.3.1",
+    "@fullcalendar/daygrid": "^5.3.2",
+    "alpinejs": "^2.7.0",
+    "axios": "^0.20.0",
+    "fullcalendar": "^5.3.2",
     "postcss-modules": "^3.2.2",
     "postcss-purgecss": "^2.0.3",
     "purgecss": "^3.0.0",
