--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@fullcalendar/core": "^5.3.1",
     "@fullcalendar/daygrid": "^5.3.2",
+    "@fullcalendar/interaction": "^5.3.1",
     "alpinejs": "^2.7.0",
     "axios": "^0.20.0",
     "fullcalendar": "^5.3.2",
